--- a/playbooks/roles/base/tasks/main.yml
+++ b/playbooks/roles/base/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - import_tasks: base_setup.yml
 #- import_tasks: ssh.yml закрывает вход для рута и дает войти только админу
-#- import_tasks: adduser.yml
-#- import_tasks: ssh-key.yml
+#- import_tasks: adduser.yml добавляет юзеров для кажой нодв
+#- import_tasks: ssh-key.yml обменивается ssh ключами 
 - import_tasks: swap.yml
 
